--- a/cadastroLivro/cadastroLivro.html
+++ b/cadastroLivro/cadastroLivro.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styleCadLivro.css">
+    <link rel="stylesheet" href="/Biblio/cadastroLivro/styleCadLivro.css">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <title>Biblio+</title>
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
@@ -22,15 +19,14 @@
 
 
 
-    <header id="header">
+    <header id="nitro">
 
         <nav id="nav" class="nav-bar container-fluid">
             <div class="row nav-superior">
                 <div class="d-flex navbar-logo col-lg-2 col-md-6 col-sm-12 coll ">
-                    <a href="index.html"><img class="img-logo" src="img/logo_completa.png" alt=""></a>
-                    <button class="col-sm-3" aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true"
-                        aria-controls="menu" aria-expanded="false">
-                        <a href="index.html"><img class="user-img user-mobile" src="img/user.png" alt=""></a>
+                    <a href="index.html"><img class="img-logo" src="/Biblio/img/logo_completa.png" alt=""></a>
+                    <button class="col-sm-3" aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
+                        <a href="index.html"><img class="user-img user-mobile" src="/Biblio/img/user.png" alt=""></a>
                         <span id="hamburger"></span>
 
                     </button>
@@ -42,10 +38,9 @@
 
                 <div class="col-lg-4 col-md-5 col-sm-12 coll pt-4">
                     <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Pesquisar livros"
-                            aria-label="Search">
+                        <input class="form-control me-2" type="search" placeholder="Pesquisar livros" aria-label="Search">
                         <button class="btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
-                        <a href="index.html"><img class="user-img user-desktop" src="img/user.png" alt=""></a>
+                        <a href="index.html"><img class="user-img user-desktop" src="/Biblio/img/user.png" alt=""></a>
                     </form>
                 </div>
             </div>
@@ -80,8 +75,7 @@
                                     <legend><span class="number">1</span>Informações do livro</legend>
 
                                     <label for="foto">Capa do Livro:</label>
-                                    <input type="file" id="foto" name="foto_usuario" accept="image/*"
-                                        defaultValue="insira a foto padrão"><br>
+                                    <input type="file" id="foto" name="foto_usuario" accept="image/*" defaultValue="insira a foto padrão"><br>
 
                                     <label for="nome">Nome do livro:</label>
                                     <input type="text" id="nome" name="nome_usuario"><br>
@@ -134,7 +128,7 @@
             <div class="col 2">
 
                 <p>
-                    <a href="index.html"><img class="img-logo-simplificada" src="img/logo_simplificada.png" alt=""></a>
+                    <a href="index.html"><img class="img-logo-simplificada" src="/Biblio/img/logo_simplificada.png" alt=""></a>
                     Biblio+ 2022 © Todos os direitos reservados
                 </p>
             </div>
@@ -144,7 +138,7 @@
         </article>
     </footer>
 
-    <script type="text/javascript" src="js/javascript.js"></script>
+    <script type="text/javascript" src="/Biblio/js/javascript.js"></script>
 </body>
 
 </html>
