--- a/login/login.html
+++ b/login/login.html
@@ -1,43 +1,45 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
+
+<head>
     <link href="style_login.css" rel="stylesheet">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
+
     <meta charset="utf-8">
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="logo-biblio">
-     <img src="logo_completa.png" />  
+        <img src="/Biblio/img/logo_completa.png" />
     </div>
     <div class="login-box">
         <div class="login-icon">
-        <i class="fa-regular fa-user fa-3x"></i>
-    </div>
+            <i class="fa-regular fa-user fa-3x"></i>
+        </div>
         <h2>Faça Login</h2>
         <form>
-          <div class="user-box">
-            <input type="text" name="" required="">
-            <label>Email</label>
-          </div>
-          <div class="user-box">
-            <input type="password" name="" required="">
-            <label>Senha</label>
-          </div>
-          <div class="teste">
-          <a href="cadastro.html" type="button">    
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span>
-            Login
-          </a>
-        </div>
+            <div class="user-box">
+                <input type="text" name="" required="">
+                <label>Email</label>
+            </div>
+            <div class="user-box">
+                <input type="password" name="" required="">
+                <label>Senha</label>
+            </div>
+            <div class="teste">
+                <a href="cadastro.html" type="button">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span> Login
+                </a>
+            </div>
         </form>
-      </div>
-  </body>
+    </div>
+</body>
+
 </html>
